# iga-ads

./: .clang-format  .clang-tidy  .codespellrc  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .projections.json  CMakeLists.txt  CMakePresets.json  Dockerfile  Jenkinsfile  Jenkinsfile.groovy  LICENSE  README  README.md  cahn_hilliard  flow  heat_1d  heat_2d  heat_3d  linear_elasticity  make_images.sh  movie  plot  plot_norm  validation
.github/workflows/: build.yml  coverity.yml
cmake/: AddProgram.cmake  Coverage.cmake  Installation.cmake  Packaging.cmake  Sanitizers.cmake  Setup.cmake  Version.cmake  Warnings.cmake  ads-config.cmake.in
cmake/Modules/: AddProgram.cmake  FindMUMPS.cmake
examples/: CMakeLists.txt
examples/advection/: skew.cpp
examples/cg/: advection.hpp  main.cpp  problems.hpp  shishkin.cpp  shishkin.hpp
examples/demkowicz/: demkowicz.hpp  main.cpp
examples/dg/: cip_advection_diffusion.cpp  laplace.cpp
examples/docker-project/: CMakeLists.txt  README.md  heat_1d.cpp
examples/elasticity/: elasticity.hpp  elasticity_pouria.cpp  elasticity_pouria.hpp  elasticity_victor.hpp  implicit.hpp  main.cpp  victor.cpp
examples/erikkson/: erikkson.hpp  erikkson_base.hpp  erikkson_cg.hpp  erikkson_cg_weak.hpp  erikkson_inverse.hpp  erikkson_mumps.hpp  erikkson_mumps_split.hpp  erikkson_quanling.hpp  erikkson_supg.hpp  erikkson_supg_weak.hpp  inverse.cpp  inverse.hpp  inverse.sh  inverse_postprocess.cpp  main.cpp  main_inverse.cpp  main_mumps.cpp  main_nonstationary.cpp  pollution_cg.hpp  pollution_rotation.hpp  solution.hpp
examples/flow/: environment.hpp  flow.hpp  geometry.hpp  main.cpp  pumps.hpp
examples/heat/: heat_1d.cpp  heat_1d.hpp  heat_2d.cpp  heat_2d.hpp  heat_3d.cpp  heat_3d.hpp
examples/implicit/: coupled.cpp  coupled.hpp  implicit.hpp  main.cpp
examples/maxwell/: antenna.hpp  antenna_problem.hpp  excitation.hpp  head_antenna_problem.hpp  head_data.cpp  head_data.hpp  main.cpp  main_ads.cpp  main_cauchy.cpp  main_cauchy_head.cpp  main_head.cpp  main_mt.cpp  main_uniform.cpp  maxwell_absorbing_bc.hpp  maxwell_ads.hpp  maxwell_base.cpp  maxwell_base.hpp  maxwell_cauchy.hpp  maxwell_cauchy_head.hpp  maxwell_galerkin.hpp  maxwell_head.hpp  maxwell_head_problem.cpp  maxwell_head_problem.hpp  maxwell_uniform.hpp  mt_problem.hpp  mt_source.hpp  plane_wave_problem.hpp  problems.hpp  results.cpp  results.hpp  scattering_problem.hpp  solver_phase.hpp  spaces.cpp  spaces.hpp  state.cpp  state.hpp  utils.hpp
examples/multistep/: main.cpp  multistep2d.hpp  multistep3d.hpp  multistep_base.hpp  scheme.cpp  scheme.hpp
examples/pollution/: dpg.cpp  dpg3d.cpp  main.cpp  pollution_2d.hpp  pollution_3d.hpp  pollution_dpg_2d.hpp  pollution_dpg_3d.hpp  pollution_dpg_v2_2d.hpp
examples/scalability/: main.cpp  test2d.hpp  test3d.hpp
examples/spacetime/: heat.cpp
examples/stokes/: main.cpp  main_dg.cpp  main_nonstationary.cpp  main_projection.cpp  main_split.cpp  space_set.hpp  stokes.hpp  stokes_conforming.hpp  stokes_constrained.hpp  stokes_dg.hpp  stokes_dg_split.hpp  stokes_projection.hpp  stokes_split.hpp
examples/tumor/: params.hpp  skin.hpp  state.hpp  tumor.cpp  tumor.hpp  tumor_main.cpp  vasculature.hpp
examples/validation/: main.cpp  validation.hpp
examples/victor/: main.cpp  victor.hpp
include/ads/: basis_data.hpp  config.hpp  config.hpp.in  form_matrix.hpp  output_manager.hpp  (+4 more)
jenkins/: build.groovy  installDependencies.groovy
libs/: CMakeLists.txt  clara.cmake
problems/: CMakeLists.txt
problems/cg/: advection.hpp  problems.hpp  shishkin.cpp  shishkin.hpp
problems/demkowicz/: demkowicz.hpp  main.cpp
problems/dg/: laplace.cpp
problems/elasticity/: elasticity.hpp  elasticity_pouria.cpp  elasticity_pouria.hpp  elasticity_victor.hpp  implicit.hpp  main.cpp  victor.cpp
problems/erikkson/: erikkson.hpp  erikkson_base.hpp  erikkson_cg.hpp  erikkson_cg_weak.hpp  erikkson_mumps.hpp  erikkson_mumps_split.hpp  erikkson_quanling.hpp  erikkson_supg.hpp  erikkson_supg_weak.hpp  main.cpp  main_mumps.cpp  main_nonstationary.cpp  pollution_cg.hpp  pollution_rotation.hpp  solution.hpp
problems/flow/: environment.hpp  flow.hpp  geometry.hpp  main.cpp  pumps.hpp
problems/heat/: heat_1d.cpp  heat_1d.hpp  heat_2d.cpp  heat_2d.hpp  heat_3d.cpp  heat_3d.hpp
problems/implicit/: coupled.cpp  coupled.hpp  implicit.hpp  main.cpp
problems/maxwell/: main.cpp  main_head.cpp  maxwell_head.hpp  problems.hpp  state.hpp
problems/pollution/: dpg.cpp  dpg3d.cpp  main.cpp  pollution_dpg_2d.hpp  pollution_dpg_3d.hpp  pollution_dpg_v2_2d.hpp
problems/stokes/: main.cpp  main_dg.cpp  main_nonstationary.cpp  main_projection.cpp  main_split.cpp  stokes.hpp  stokes_conforming.hpp  stokes_constrained.hpp  stokes_dg.hpp  stokes_dg_split.hpp  stokes_projection.hpp  stokes_split.hpp
problems/tumor/: params.hpp  skin.hpp  state.hpp  tumor.cpp  tumor.hpp  tumor_main.cpp  vasculature.hpp
problems/tumor/3d/: main.cpp  rasterizer.hpp  tumor_3d.hpp  vasculature_parser.hpp
problems/tumor/vasculature/: defs.hpp  generator.hpp  plot.cpp  plot.hpp  rasterizer.hpp  vasculature.cpp  vasculature.hpp
problems/validation/: main.cpp  validation.hpp
problems/victor/: main.cpp
results/: movie
scripts/: .pylintrc  clang-tidy-filter.py  clang-tidy-summary.sh  copyright.py  coverity-download.sh  coverity-submit.sh  docker-start.sh  format.py  guards.py  install-dependencies.sh  run-checks.sh  setup-compiler.sh  spelling.sh  util.py
src/: CMakeLists.txt  main.cpp  mumps.hpp
test/: CMakeLists.txt  solver.cpp
test/ads/: example.cpp
test/ads/bspline/: bspline_test.cpp  eval_test.cpp
test/ads/lin/: banded_solver_test.cpp  dense_solve_test.cpp  dense_solver_test.cpp  tensor_test.cpp
test/ads/util/: multi_array_test.cpp
tests/: CMakeLists.txt  main.cpp
tests/ads/: basis_data_test.cpp  solver_test.cpp
tests/ads/bspline/: bspline_test.cpp  eval_test.cpp
tests/ads/lin/: band_solve_test.cpp  dense_solve_test.cpp  tensor_test.cpp
tests/ads/util/: multi_array_test.cpp
tools/: CMakeLists.txt  error.cpp
(+285 files in other folders)
